--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 h1 {
     color: purple;
     font-weight: bold;
+    font-size: 35px;
 }
 h2 {
     color: purple;
@@ -9,5 +10,98 @@ h2 {
 body {
     background-image: url(/Images/donut_background.png);
     background-size: cover;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.donut_counter{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 70px;
+}
+.donut_dashboard{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.donut_add{
+    background-color: purple;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 24px;
+    border: 2px solid black;
+    transition-duration: 0.1s;
+}
+.donut_add:hover{
+    background-color: yellow;
+    color: black;
+    cursor: pointer;
+}
+.donut_remove{
+    background-color: purple;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 24px;
+    border: 2px solid black;
+    transition-duration: 0.1s;
+}
+.donut_remove:hover{
+    background-color: yellow;
+    color: black;
+    cursor: pointer;
+}
+.donut_autoclicker_add{
+    background-color: purple;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 24px;
+    border: 2px solid black;
+    transition-duration: 0.1s;
+}
+.donut_autoclicker_add:hover{
+    background-color: yellow;
+    color: black;
+    cursor: pointer;
+}
+.donut_autoclicker_add:disabled{
+    background-color: rgb(173, 166, 173);
+    color: white;
+    border-radius: 8px;
+    padding: 10px 24px;
+    border: 2px solid black;
+    transition-duration: 0.1s;
+}
+.donut_multiplier_add{
+    background-color: purple;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 24px;
+    border: 2px solid black;
+    transition-duration: 0.1s;
+}
+.donut_multiplier_add:hover{
+    background-color: yellow;
+    color: black;
+    cursor: pointer;
+}
+.donut_multiplier_add:disabled{
+    background-color: rgb(173, 166, 173);
+    color: white;
+    border-radius: 8px;
+    padding: 10px 24px;
+    border: 2px solid black;
+    transition-duration: 0.1s;
+}
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    background: #333; opacity:0.7;
+    font-weight: bold;
+}
+nav a {
+    color: #fff;
+    text-decoration: none;
+    padding: .5em 2em;
+}
+nav a:hover{
+    background: purple;
